-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 7, 19
-
Component/s: client-libs
-
b24
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8291498 | 17.0.6-oracle | Alexey Ivanov | P4 | Resolved | Fixed | b01 |
| JDK-8296864 | 17.0.6 | Goetz Lindenmaier | P4 | Resolved | Fixed | b03 |
| JDK-8291500 | 11.0.18-oracle | Alexey Ivanov | P4 | Resolved | Fixed | b01 |
| JDK-8297048 | 11.0.18 | Goetz Lindenmaier | P4 | Resolved | Fixed | b03 |
BOOL result = trayIcon->SendTrayMessage(jupdate == JNI_TRUE ? NIM_MODIFY : NIM_ADD);
// 6270114: Instructs the taskbar to behave according to the Shell version 5.0
if (result && jupdate == JNI_FALSE) {
trayIcon->SendTrayMessage(NIM_SETVERSION);
}
The only difference is the usage of jupdate which controls whether the icon is to be added or modified.
These could be refactored into separate methods to avoid code duplication, especially in the case of adding where another method must be called.
[1] https://github.com/openjdk/jdk/blob/7b988b31c661c6e3e58cf8ced81732e40a79d4f5/src/java.desktop/windows/native/libawt/windows/awt_TrayIcon.cpp#L477
[2] https://github.com/openjdk/jdk/blob/7b988b31c661c6e3e58cf8ced81732e40a79d4f5/src/java.desktop/windows/native/libawt/windows/awt_TrayIcon.cpp#L796
- backported by
-
JDK-8291498 Refactor add/modify notification icon (TrayIcon)
-
- Resolved
-
-
JDK-8291500 Refactor add/modify notification icon (TrayIcon)
-
- Resolved
-
-
JDK-8296864 Refactor add/modify notification icon (TrayIcon)
-
- Resolved
-
-
JDK-8297048 Refactor add/modify notification icon (TrayIcon)
-
- Resolved
-
- relates to
-
JDK-8286838 SendTrayMessage(NIM_ADD) returns failure in AwtTrayIcon::WmTaskbarCreated
-
- Closed
-
- links to
-
Commit
openjdk/jdk11u-dev/954a6e48
-
Commit
openjdk/jdk17u-dev/f29ade7e
-
Commit
openjdk/jdk/9f562ef7
-
Review
openjdk/jdk11u-dev/1513
-
Review
openjdk/jdk17u-dev/871
-
Review
openjdk/jdk/8749