8286872: Refactor add/modify notification icon (TrayIcon)